# trinoq

./: README.md  pyproject.toml  trinoq.py
.github/workflows/: publish.yml  release.yml
src/: trinoq.py  trinoq_tui.py
tests/: README.md  test_trinoq.py
