[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trinoq"
dynamic = ["version"]
authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "trino>=0.300.0",
    "google-auth>=2.0.0",
    "pyarrow>=7.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
tui = ["textual>=0.80.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
trinoq = "trinoq:app"
trinoq-tui = "trinoq_tui:main"


[tool.setuptools_scm]

